[package]
name = "file_hasher"
version = "1.0.4"
authors = ["Andreas Ejdesgaard <andreasejdesgaard@protonmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
readme = "README.md"

[profile.release]
lto = true

[dependencies]
blake2 = "0.8.1"
chrono = "0.4.11"
hex = "0.4.2"
rayon = "1.3.0"
join = "0.1.1"
structopt = "0.3.14"
