[package]
name = "file_hasher_core"
version = "1.1.6"
authors = ["Andreas Ejdesgaard <andreasejdesgaard@protonmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
blake2 = "0.10.2"
chrono = "0.4.19"
hex = "0.4.3"
rayon = "1.5.1"
join = "0.3.0"
itertools = "0.10.3"
filetime = "0.2.15"

#[dev-dependencies]
#mocktopus = "0.7.11"
